--- a/3-crud/src/main/resources/application.properties
+++ b/3-crud/src/main/resources/application.properties
@@ -6,7 +6,7 @@ hibernate.connection.username=root
 hibernate.connection.password=mysql
 
 hibernate.show_sql=true
-hibernate.format_sql=true
+#hibernate.format_sql=true
 hibernate.highlight_sql=true
 
 hibernate.hbm2ddl.auto=update
