Finish CRUD Operations

--- a/3-crud/src/main/resources/application.properties
+++ b/3-crud/src/main/resources/application.properties
@@ -10,3 +10,5 @@ hibernate.show_sql=true
 hibernate.highlight_sql=true
 
 hibernate.hbm2ddl.auto=update
+
+hibernate.allow_refresh_detached_entity=false
