--- a/4-relationships/src/main/resources/application.properties
+++ b/4-relationships/src/main/resources/application.properties
@@ -9,6 +9,6 @@ hibernate.show_sql=true
 #hibernate.format_sql=true
 hibernate.highlight_sql=true
 
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create-drop
 
 hibernate.allow_refresh_detached_entity=false
