--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>2-bootstrapping</module>
         <module>3-crud</module>
         <module>4-relationships</module>
+        <module>5-inverse-end-gotchas</module>
     </modules>
 
     <properties>
